@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1033 2019/07/18 00:15:24 fox Exp $
+# $NetBSD: Makefile,v 1.1034 2019/07/31 13:42:34 brook Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -11,6 +11,7 @@ SUBDIR+=	GutenMark-words
 SUBDIR+=	LDoc
 SUBDIR+=	Markdown
 SUBDIR+=	OdfConverter
+SUBDIR+=	R-cellranger
 SUBDIR+=	R-formatR
 SUBDIR+=	R-gsubfn
 SUBDIR+=	R-highr
