@@ -1,0 +1,2 @@
+Helper functions to work with spreadsheets and the "A1:D10" style of cell
+range specification.
