@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:42:34 brook Exp $
+
+SHA1 (R/cellranger_1.1.0.tar.gz) = c04aca542122f8579453239b6773918cd9e4be34
+RMD160 (R/cellranger_1.1.0.tar.gz) = d85691a8df86295754128ab4e4bef4e8bb3c0e49
+SHA512 (R/cellranger_1.1.0.tar.gz) = 5a27ce21b5d22b0eea06f64ef6faf26a63860ccefa17e3d4cb74ffceaf8b0b6f332b482d476dbc32f8174d5bfef01a5f9fc20673db2fa5386682be1baf11d2a9
+Size (R/cellranger_1.1.0.tar.gz) = 63857 bytes
