@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3118 2019/07/31 13:40:18 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3119 2019/07/31 13:42:34 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5075,3 +5075,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added math/R-zeallot version 0.1.0 [brook 2019-07-31]
 	Added misc/R-Hmisc version 4.2.0 [brook 2019-07-31]
 	Added sysutils/R-progress version 1.2.2 [brook 2019-07-31]
+	Added textproc/R-cellranger version 1.1.0 [brook 2019-07-31]
